Fix ios address bar collapsing

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,10 @@
-html, body, material-app, mat-sidenav-container {
-  height: 100%;
-  width: 100%;
-  margin: 0;
+html, body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   // Helps fonts on OSX looks more consistent with other systems
   // Isn't currently in button styles due to performance concerns
+  margin: 0;
+  padding: 0; 
+  
   * {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -101,8 +101,8 @@ html, body, material-app, mat-sidenav-container {
   }
 
   .app-content {
+    padding-top: 22px;
     background-color: white;
-    padding-top: 65px;
   }
 
   .mat-grid-tile {
